Fix arrow vertical alignment

--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ li:not(:last-child) {
     content: url(arrow.svg);
     width: 1.5em;
     display: inline-block;
-    vertical-align: text-top;
+    vertical-align: middle;
 }
 
 .change-lang img {
